--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -1,1 +1,39 @@
-CADASTRO
+{% extends 'base.html' %}
+{% load static %}
+
+{% block 'head' %}
+<link rel="stylesheet" href="{% static 'autenticacao/css/autenticacao.css' %}">
+<link rel="stylesheet" href="{% static 'home/css/home.css' %}" >
+{% endblock %}
+
+{% block 'body' %}
+    <div class="box text-center">
+        <form action="{% url  'cadastro' %}" method="POST">{% csrf_token %}
+
+                    {% if messages %}
+                {% for message in messages %}
+                    <div class="alert {{message.tags}}">
+                        {{message}}
+                    </div>
+                {% endfor %}
+        {% endif %}
+            <h1 class="titulo font-degrade borda-bottom-degrade">INSCREVA-SE</h2>
+            <br>
+            <span class="span-descricao">Nome de usuário:</span>
+            <input type="text" class="form-control input-cadastro" name="username">
+            <br>
+            <span class="span-descricao">Email</span>
+            <input type="text" class="form-control input-cadastro" name="email">
+            <br>
+            <span class="span-descricao">Senha:</span>
+            <input type="password" class="form-control input-cadastro" name="password">
+            <br>
+            <span class="span-descricao">Confirmar senha:</span>
+            <input type="password" class="form-control input-cadastro" name="confirm-password">
+            <br>
+            <input  type="submit" value="CADASTRAR" class="btn btn-success btn-lg">
+            <a href="#" class="btn btn-primary btn-lg">LOGIN</a>
+        </form>
+            
+    </div>
+{% endblock %} 
